--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,12 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
+  "homepage":"https://.github.io/fpmsme/",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -17,7 +20,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.3",
     "redux-persist": "^6.0.0",
-    "vite":"^5.0.8"
+    "vite": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -28,6 +31,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
