--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "homepage":"https://.github.io/fpmsme/",
+  "homepage": "https://.github.io/fpmsme/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.21.3",
+    "react-spring": "^9.7.3",
+    "react-toggle-dark-mode": "^1.1.1",
     "redux-persist": "^6.0.0",
     "vite": "^5.0.8"
   },
